home-work-1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-home-work-1-service
spec:
  selector:
    app: otus-home-word-1-app
  ports:
  - port: 8000
    targetPort: 8000
