home-work-1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-home-work-1-ingress
  namespace: otus
  labels:
    name: otus-home-work-1-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: otus-home-work-1-service
            port: 
              number: 8000
